tests/baselines/reference/accessorWithInitializer(strict=true).errors.txt
accessorWithInitializer.ts(2,9): error TS1052: A 'set' accessor parameter cannot have an initializer.
accessorWithInitializer.ts(2,9): error TS7032: Property 'X' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
accessorWithInitializer.ts(3,16): error TS1052: A 'set' accessor parameter cannot have an initializer.
accessorWithInitializer.ts(3,16): error TS7032: Property 'X' implicitly has type 'any', because its set accessor lacks a parameter type annotation.


==== accessorWithInitializer.ts (4 errors) ====
    class C {
        set X(v = 0) { }
            ~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
            ~
!!! error TS7032: Property 'X' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
        static set X(v2 = 0) { }
                   ~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
                   ~
!!! error TS7032: Property 'X' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
    }